backend/crates/pagination/src/cursor/snapshots/pagination__cursor__tests__cursor_wire_payload_next.snap
---
source: backend/crates/pagination/src/cursor/tests.rs
expression: json_value
---
{
  "dir": "Next",
  "key": {
    "created_at": "2026-03-22T10:30:00Z",
    "id": "test-id"
  }
}
